--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,53 +1,45 @@
-<div class="container">
-  <table class="table">
-    <thead>
-      <tr>
-        <td></td>
-      </tr>
-    </thead>
-    <tbody>
 
-    <table>
 
-      <tr></tr>
-      <tr>
-        <td rowspan="6"><%= image_tag @item.get_image(200,200) %> </td>
-        <td>商品名</td>
-        <td><%= @item.name %></td>
-      </tr>
-      <tr>
-        <td>商品説明</td>
-        <td><%= @item.introduction %></td>
-      </tr>
-      <tr>
-        <td>ジャンル</td>
-        <td><%= @item.genre.name %></td>
-      </tr>
-      <tr>
-        <td>税込価格<br>(税抜価格)</td>
-        <td>
-          <%= @item.with_tax_price %> (<%= @item.price %>) 円
-        </td>
-      </tr>
-      <tr>
-        <td>販売ステータス</td>
-        <td><%= @item.is_active_i18n %></td>
-      </tr>
-</tbody>
-</table>
-</div>
 
-<%= link_to "編集する", edit_admin_item_path(@item.id), class: "btn btn-sm btn-success" %>
-</div>
+
 
 
 <div class='container px-5 px-sm-0'>
   <div class='row'>
-    <div class="col-md-3">
-      <%= image_tag @item.get_image(200,200) %>
-    </div>
     <div class='col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto'>
-
+      <table class="table table-borderless">
+        <thead>
+          <tr>
+            <td></td>
+          </tr>
+        </thead>
+        <tbody>
+          <tr></tr>
+          <tr>
+            <td rowspan="6"><%= image_tag @item.get_image(200,200) %> </td>
+            <td>商品名</td>
+            <td><%= @item.name %></td>
+          </tr>
+          <tr>
+            <td>商品説明</td>
+            <td><%= @item.introduction %></td>
+          </tr>
+          <tr>
+            <td>ジャンル</td>
+            <td><%= @item.genre.name %></td>
+          </tr>
+          <tr>
+            <td>税込価格<br>(税抜価格)</td>
+            <td>
+              <%= @item.with_tax_price.to_s(:delimited)  %> (<%= @item.price.to_s(:delimited)  %>) 円
+            </td>
+          </tr>
+          <tr>
+            <td>販売ステータス</td>
+            <td><%= @item.is_active_i18n %></td>
+          </tr>
+        </tbody>
+      </table>
     </div>
   </div>
 </div>
