--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,18 +13,14 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-
-  <header>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light" style="height: 120px;">
-  <div class="container mr-0">
-    <a class="navbar-brand" href="/"><%= image_tag("headerlogo.png") %></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+  <header></header>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#"><%=link_to image_tag("headerlogo.png"), "/" %></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <!--<%= link_to "Nagano Cake", root_path, class: "navbar-brand" %>-->
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-      <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
-
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ml-auto">
         <% if customer_signed_in? %>
           <li class="nav-item">
             <%= link_to "マイページ", customers_my_page_path, class: "nav-link" %>
@@ -39,7 +35,7 @@
             <%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class: "nav-link" %>
           </li>
         <% elsif admin_signed_in? %>
-        <li class="nav-item">
+          <li class="nav-item">
             <%= link_to "商品一覧", admin_items_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
@@ -47,7 +43,7 @@
           </li>
           <li class="nav-item">
             <%= link_to "注文履歴一覧", admin_items_path, class: "nav-link" %>
-            <!--↑注文履歴一覧へパス変更-->
+          <!--↑注文履歴一覧へパス変更-->
           </li>
           <li class="nav-item">
             <%= link_to 'ジャンル一覧', admin_genres_path, class: "nav-link" %>
@@ -69,20 +65,15 @@
             <%= link_to "ログイン", new_customer_session_path, class: "nav-link" %>
           </li>
         <% end %>
-        <li class="nav-item">
+          <li class="nav-item">
           <%= form_with url: root_path, method: :get, local: true, class: "d-flex" do |f| %>
             <%= f.search_field :query, class: "form-control me-2", placeholder: "検索", aria: { label: "Search" } %>
             <%= f.submit "検索", class: "btn btn-outline-success" %>
           <% end %>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
-
-
-</header>
-
+          </li>
+        </ul>
+      </div>
+    </nav>
 
   <!-- フラッシュメッセージ -->
   <% if flash[:notice] %>
