--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -18,13 +18,18 @@
                 <%= order.created_at.strftime('%Y/%m/%d %H:%M:%S') %>
               <% end %>
             </td>
-            <td><%= order.customer.name %></td>
-            <td><%= order.order_detail.count %></td>
-            <td><%= order.status %></td>
+            <td>
+              <%# order.customers each do |customer| %>
+              <%#= customer.first_name %>
+              <%# end %>
+              <%= order.customer.first_name %>
+            </td>
+            <td><%#= order.order_detail.count %></td>
+            <td><%= order.status_i18n %></td>
           <% end %>
         </tr>
       </tbody>
     </table>
-    <div class="mx-auto"><%= paginate @orders %></div>
+
   </div>
 </div>
