--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -21,7 +21,7 @@
       <th>注文ステータス</th>
       <td>
         <% form_with model: @order, url: admin_order_path(@order), method: :post |f| %>
-          <%= f.select :status, options_for_select(  %>
+          <%= f.select :status, options_for_select()  %>
         <% end %>
       </td>
     </tr>
