--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,3 +1,134 @@
+<div class=" col-sm-8 mx-auto mt-5">
+  <div class=="card-body">
+    <h3 class="mt-1 mb-3">新規会員登録</h3>
+    <div class="row g-3">
+      <div class="col-md-6">
+        <%= form_for(resource, as: resource_name, url: session_path(resource_name)) do |f| %>
+        <%= f.label :first_name, "(姓)", :class => "form-label" %>
+        <%= f.email_field :first_name, autofocus: true, autocomplete: "First name", placeholder: "First name", :class => "form-control" %>
+      </div>
+      <div class="col-md-6">
+        <%= f.label :last_name, "(名)", :class => "form-label" %>
+        <%= f.text_field :last_name, autocomplete: "last_name", placeholder: "Last name", :class => "form-control" %>
+      </div>
+      <div class="col-md-6">
+        <%= f.label :first_name, "(セイ)" %>
+        <%= f.text_field :first_name, autocomplete: "First name", placeholder: "", :class => "form-control" %>
+      </div>
+      <div class="col-md-6">
+        <%= f.label :last_name_kana, "(メイ)" %>
+        <%= f.text_field :last_name_kana, autocomplete: "first_name", autocomplete: "Last name", placeholder: "ナマエ", :class => "form-control" %>
+      </div>
+      <div class="col-md-6">
+        <label for="inputEmail4" class="form-label">メールアドレス</label>
+        <input type="email" class="form-control" id="inputEmail4">
+      </div>
+    </div>
+    <div class="row g-3">
+      <div class="col-md-6">
+        <label for="inputEmail4" class="form-label">郵便番号</label>
+        <input type="email" class="form-control" id="inputEmail4">
+      </div>
+    </div>
+    <div class="row g-3">
+      <div class="col-md-12">
+        <label for="inputEmail4" class="form-label">住所</label>
+        <input type="email" class="form-control" id="inputEmail4">
+      </div>
+    </div>
+    <div class="row g-3">
+      <div class="col-md-6">
+        <label for="inputEmail4" class="form-label">電話番号(ハイフンなし)</label>
+        <input type="email" class="form-control" id="inputEmail4">
+      </div>
+    </div>
+    <div class="row g-3">
+      <div class="col-md-6">
+        <label for="inputEmail4" class="form-label">パスワード(6文字以上)</label>
+        <input type="email" class="form-control" id="inputEmail4">
+      </div>
+    </div>
+    <div class="row g-3">
+      <div class="col-md-6">
+        <label for="inputEmail4" class="form-label">パスワード(確認用)</label>
+        <input type="email" class="form-control" id="inputEmail4">
+      </div>
+    </div>
+
+      <div class="form-group col-md-6">
+        <%= f.label :first_name, "(姓)", :class => "form-label" %>
+        <%= f.email_field :first_name, autofocus: true, autocomplete: "First name", :class => "form-control" %>
+      </div>
+      <div class="form-group col-md-6">
+        <%= f.label :password, :class => "form-label" %>
+        <%= f.password_field :password, :class => "form-control" %>
+      </div>
+
+      <!--ボタン-->
+      <div class="actions">
+        <%= f.submit "Log in", :class => "btn btn-dark btn-lg btn-block" %>
+      </div>
+    <% end %>
+
+    <div class="small text-muted text-center mt-3"></div>
+  </div>
+</div>
+<!--↑ここまで-->
+
+<!--↓サンプル-->
+<div class="row g-3">
+  <div class="col-md-6">
+    <label for="inputEmail4" class="form-label">First name</label>
+    <input type="text" class="form-control" placeholder="First name" aria-label="First name">
+  </div>
+  <div class="col-md-6">
+    <label for="inputPassword4" class="form-label">なまえ</label>
+    <input type="text" class="form-control" placeholder="Last name" aria-label="Last name">
+  </div>
+  <div class="col-md-6">
+    <label for="inputEmail4" class="form-label">Email</label>
+    <input type="email" class="form-control" id="inputEmail4">
+  </div>
+</div>
+
+
+<form class="row g-3">
+  <div class="col-md-6">
+    <label for="inputEmail4" class="form-label">First name</label>
+    <input type="text" class="form-control" placeholder="First name" aria-label="First name">
+  </div>
+  <div class="col-md-6">
+    <label for="inputPassword4" class="form-label">なまえ</label>
+    <input type="text" class="form-control" placeholder="Last name" aria-label="Last name">
+  </div>
+  <div class="col-md-6">
+    <label for="inputEmail4" class="form-label">Email</label>
+    <input type="email" class="form-control" id="inputEmail4">
+  </div>
+</form>
+
+<div class="row g-3">
+    <div class="col-6">
+    <label for="inputAddress" class="form-label">郵便番号</label>
+    <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+  </div>
+  <div class="col-12">
+    <label for="inputAddress2" class="form-label">住所</label>
+    <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+  </div>
+  <div class="col-md-6">
+    <label for="inputPassword4" class="form-label">電話番号</label>
+    <input type="text" class="form-control" placeholder="Last name" aria-label="Last name">
+  </div>
+  <div class="col-12">
+  </div>
+  <div class="col-12">
+    <button type="submit" class="btn btn-primary">Sign in</button>
+  </div>
+  </div>
+
+
+
 <h2>Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
