--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -65,7 +65,7 @@
             <%= link_to "ログイン", new_customer_session_path, class: "nav-link" %>
           </li>
         <% end %>
-          <li class="nav-item">
+          <li class="nav-item col-md-4">
           <%= form_with url: root_path, method: :get, local: true, class: "d-flex" do |f| %>
             <%= f.search_field :query, class: "form-control me-2", placeholder: "検索", aria: { label: "Search" } %>
             <%= f.submit "検索", class: "btn btn-outline-success" %>
