--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,5 +1,23 @@
 <div class="container">
     <div class="row">
+
+      <div class="col-2 mx-auto">
+        <table class="table table-borderless">
+         <thead>
+          <tr>
+           <th>ジャンル検索</th>
+          </tr>
+         </thead>
+         <tbody>
+          <% @genres.each do |genre| %>
+          <tr>
+           <td><%= genre.name %></td>
+          </tr>
+          <% end %>
+         </tbody>
+        </table>
+       </div>
+
       <div class="col-md-2"></div>
       <div class="col-md-8">
         <div class="text-center mt-5">
