--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -48,13 +48,13 @@
         <% if @minimum_password_length %>
         <em>(<%= @minimum_password_length %> characters minimum)</em>
         <% end %>
-        <%= f.password_field :password, autocomplete: "new-password", placeholder: "new-password", :class => "form-control" %>
+        <%= f.password_field :password, autocomplete: "new-password", :class => "form-control" %>
       </div>
     </div>
     <div class="row g-3">
       <div class="col-md-6">
         <%= f.label :password_confirmation, "パスワード(確認用)" %>
-        <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "new-password", :class => "form-control" %>
+        <%= f.password_field :password_confirmation, autocomplete: "new-password", :class => "form-control" %>
       </div>
     </div>
     <div class="mt-3"></div>
