--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,3 +1,31 @@
+<div class='container px-5 px-sm-0'>
+  <div class='row'>
+    <div class='col-md-3'>
+      <table class="table table-borderless">
+         <thead>
+          <tr>
+           <th>ジャンル検索</th>
+          </tr>
+         </thead>
+         <tbody>
+          <% @genres.each do |genre| %>
+          <tr>
+           <td><%= genre.name %></td>
+          </tr>
+          <% end %>
+         </tbody>
+        </table>
+      <h2 class="mt-3">New book</h2>
+      フォーム
+    </div>
+    <div class='col-md-8 offset-md-1'>
+      <h2>Users</h2>
+      新着
+    </div>
+  </div>
+</div>
+
+
 <div class="container">
     <div class="row">
 
