--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -36,7 +36,7 @@
           <% else %>
           <li class="nav-item">
             <%= link_to about_path, class: "nav-link" do %>
-            <i class="fas fa-book-spells fa-lg" style="color: #f5cab3;"></i> About
+            <i class="fas fa-address-card fa-lg" style="color: #f5cab3;"></i> About
             <% end %>
           </li>
           <li class="nav-item">
@@ -51,7 +51,7 @@
           </li>
           <li class="nav-item">
             <%= link_to new_customer_session_path, class: "nav-link" do %>
-            <i class="far fa-sign-in-alt fa-lg" style="color: #f5cab3;"></i> ログイン
+            <i class="fas fa-door-open fa-lg" style="color: #f5cab3;"></i> ログイン
           </li>
           <% end %>
           <li class="nav-item col-md-4">
@@ -102,7 +102,7 @@
         <% else %>
           <li class="nav-item">
             <%= link_to about_path, class: "nav-link" do %>
-            <i class="fas fa-book-spells fa-lg" style="color: #f5cab3;"></i> About
+            <i class="fas fa-address-card fa-lg" style="color: #f5cab3;"></i> About
             <% end %>
           </li>
           <li class="nav-item">
@@ -117,7 +117,7 @@
           </li>
           <li class="nav-item">
             <%= link_to new_customer_session_path, class: "nav-link" do %>
-            <i class="far fa-sign-in-alt fa-lg" style="color: #f5cab3;"></i> ログイン
+            <i class="fas fa-door-open fa-lg" style="color: #f5cab3;"></i> ログイン
           </li>
           <% end %>
           <li class="nav-item col-md-4">
