--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -47,8 +47,10 @@
       </table>
 
     </div>
+   <% if current_customer.cart_items.present? %>
     <div class="text-center">
       <%= link_to "情報入力に進む", new_order_path, class: "btn btn-success"%>
     </div>
+    <% end %>
   </div>
 </div>
