--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -4,7 +4,7 @@
     <div class="row g-3">
       <div class="col-md-6">
         <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-        <%= render "public/shared/error_messages", resource: resource %>
+        <%#= render "public/shared/error_messages", resource: resource %>
         <%= f.label :first_name, "(姓)", :class => "form-label" %>
         <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name", placeholder: "令和", :class => "form-control" %>
       </div>
@@ -63,7 +63,7 @@
       <%= f.submit "新規登録", :class => "btn btn-dark btn-lg btn-block" %>
     </div>
     <% end %>
-    <%= render "public/shared/links" %>
+    <%#= render "public/shared/links" %>
   </div>
 </div>
 
