--- a/app/views/admin/customers/orders.html.erb
+++ b/app/views/admin/customers/orders.html.erb
@@ -1,5 +1,7 @@
+<div class="text-center mb-5"></div>
+
 <div class="container">
-  <h2><%= @customer.full_name %>さんの注文履歴</h2>
+  <h2 class="font-weight-bold col-3 ml-4 mb-4 text-nowrap"><%= @customer.full_name %>さんの注文履歴</h2>
   <div class="row">
     <table class="table table-striped">
       <thead>
