--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,41 +1,44 @@
 <div class="text-center mb-5"></div>
 
-<div class="container add-font">
+<div class="container">
   <div class="row">
     <%= render 'layouts/errors', obj: @genre %>
   </div>
 
-<h2 class="font-weight-bold col-3 ml-4 mb-4 text-nowrap">ジャンル一覧・追加</h2>
-<div class="text-center mb-5"></div>
+  <h3 class="font-weight-bold col-3 ml-4 mb-4 text-nowrap">ジャンル一覧・追加</h3>
+
+  <div class="text-center mb-5"></div>
 <%= form_with model: @genre, url: admin_genres_path, method: :post do |f| %>
     <%= f.label :name, 'ジャンル名' %>
     <%= f.text_field :name %>
     <%= f.submit "新規登録", class: "btn btn-outline-success" %>
 <% end %>
 
-  <div class='row'>
-    <div class='col-md-4 pt-md-5'>
-      <table class='table table-hover'>
-        <thead class="thead table-danger">
-          <tr>
-            <th>ジャンル</th>
-            <th colspan="2"></th>
-          </tr>
-        </thead>
-        <tbody>
-          <% @genres.each do |genre| %>
-          <tr>
-            <td><%= genre.name %></td>
-            <td>
-              <%= link_to "編集する", edit_admin_genre_path(genre.id), class: "btn btn-outline-success" %>
-              <%= link_to "削除", admin_genre_path(genre.id), method: :delete,
-              data: { confirm: "本当に削除しますか？" }, class: "btn btn-outline-danger ml-3" %>
-            </td>
-          </tr>
-          <% end %>
-        </tbody>
-      </table>
-      <%= paginate @genres, theme: 'twitter-bootstrap-4' %>
-    </div>
+<div class="text-center mb-5"></div>
+
+<div class="table-responsive table-hover">
+  <table class="table table-hover">
+      <thead class="table-danger">
+        <tr>
+          <th scope="col">ジャンル</th>
+          <th scope="col"></th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <% @genres.each do |genre| %>
+        <tr>
+          <td class="h5"><%= genre.name %></td>
+          <td class="h5">
+            <%= link_to "編集する", edit_admin_genre_path(genre.id), class: "btn btn-outline-success" %>
+            <%= link_to "削除", admin_genre_path(genre.id), method: :delete,
+            data: { confirm: "本当に削除しますか？" }, class: "btn btn-outline-danger ml-3" %>
+          </td>
+
+        </tr>
+      <% end %>
+      </tbody>
+    </table>
+  <%= paginate @genres, theme: 'twitter-bootstrap-4' %>
   </div>
 </div>
