--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,10 +1,10 @@
-
+<div class="text-center mb-5"></div>
 <div class="container">
 
   <div class="row">
     <div class="col-md-10">
-      <h2 class="ml-5 mb-3">注文履歴詳細</h2>
-      <table class="table table-borderless table-hover">
+      <h2 class="font-weight-bold col-3 ml-4 mb-4 text-nowrap">注文履歴詳細</h2>
+      <table class="table table-border table-hover">
         <tr>
           <th style="width:200px" >購入者</th>
           <td><%= @order.customer.full_name %></td>
@@ -39,8 +39,8 @@
   </div>
   <div class="row">
     <div class="col-md-7">
-      <table class="table table-borderless text-center">
-        <thead>
+      <table class="table table-border text-center">
+        <thead class="table table-danger">
           <th class="text-left">商品名</th>
           <th>単価（税込）</th>
           <th>数量</th>
@@ -68,7 +68,7 @@
     </div>
 
     <div class="col-md-3 mx-auto d-flex align-items-end">
-      <table class="table table-borderless text-center">
+      <table class="table table-border text-center">
         <tr>
           <th>商品合計</th>
           <td><%= @total.to_s(:delimited)%>円</td>
