--- a/app/views/public/customers/unsubscribe.html.erb
+++ b/app/views/public/customers/unsubscribe.html.erb
@@ -1,8 +1,9 @@
+<div class="text-center mb-5"></div>
 <div class="container">
   <div class="row">
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto text-center">
 
-      <h2 class="mb-5">本当に退会しますか？</h2>
+      <h2 class="font-weight-bold mb-5">本当に退会しますか？</h2>
       <P class="mb-5">
         退会すると、会員情報登録や<br>
         これまでの購入履歴が閲覧できなくなります。<br>
